--- a/src/components/Response.css
+++ b/src/components/Response.css
@@ -45,7 +45,6 @@
 
 .response-input .message {
   max-width: 100%;
-  margin-bottom: 0;
   border: 1px solid #BBDEFB;
 
   white-space: nowrap;
